--- a/docs/40_topics/40_format_standards.mdx
+++ b/docs/40_topics/40_format_standards.mdx
@@ -10,7 +10,7 @@ Research data is the key to any science. As part of a [FAIR](01_fair.mdx) practi
 
 A successful data format standard is defined by the data model and the data representation. A specification of a representation may contain the model implicitly.
 
-The **Data model** describes how data is organised, which information they contain, the data types (e.g. text, numbers, lists), the relationship between these components, and rules of component and data integrity. Conceptually, the model and its components can be organised in different ways, e.g. flat, multidimensional, as network or hierarchical. The meaning of the applied components has to be well described in an unambiguous way. [Ontologies](50_Ontology.mdx) can be consulted to ensure a consistent usage of the components in the context of the model. As the data model is abstract, it is necessary to implement representations for it, such as a database or data file on a computer.
+The **Data model** describes how data is organised, which information they contain, the data types (e.g. text, numbers, lists), the relationship between these components, and rules of component and data integrity. Conceptually, the model and its components can be organised in different ways, e.g. flat, multidimensional, as network or hierarchical. The meaning of the applied components has to be well described in an unambiguous way. [Ontologies](50_ontology.mdx) can be consulted to ensure a consistent usage of the components in the context of the model. As the data model is abstract, it is necessary to implement representations for it, such as a database or data file on a computer.
 
 Digital files containing data are only one way to represent a data model. Other **representations** would be response data from API requests or results from a database query. 
 
