--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -45,7 +45,7 @@ The role pages focus on the motivation for role-specific requirements and answer
 
 ### Handling data
 
-The problems section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Data storage and archiving and data publication are also covered. Find a detailed description of the following aspects:
+The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Data storage and archiving and data publication are also covered. Find a detailed description of the following aspects:
 
 - general basics
 - formal responsibilities and organisational conventions
