--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -17,7 +17,7 @@ Image Attribution: Philip Strömert, Oliver Koepler, Johannes Hunold, Steffen Ne
 Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analyzed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. As can be seen exemplarily in the graphical abstract above, ontologies, taxonomies, terminologies or controlled vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data. Quite a few ontologies already exist for the semantic description of general scientific concepts and relations, as well as for chemistry specific ones. Based on an [analysis done in Task Area 6.1](https://drive.google.com/drive/folders/1lVsDZX9Jm5XK_c0qgNs-ZnNf_sOZ-1VF) of the NFDI4Chem project, the present article provides a commented selections of those ontologies that seem most suitable for a FAIR RDM in chemistry, as well as a very brief [glossary](/docs/topics/ontology#glossary) of ontological technical terms.
 
 ## Graphical overview of chemical ontologies
-This graphical overview shows chemistry specific ontologies suitable for a FAIR RDM with regard to their position in the [BFO](https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/topics/ontology_search/#bfo)/[OBO Foundry](http://www.obofoundry.org/) framework. 
+This graphical overview shows chemistry specific ontologies suitable for a FAIR RDM with regard to their position in the [BFO](#bfo)/[OBO Foundry](http://www.obofoundry.org/) framework. 
 ![Ontology-based RDM](/img/topics/Overview_Ontologies4Chem_2021.svg)
 Image Attribution: Philip Strömert, [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)
 
@@ -40,7 +40,7 @@ This tabular overview lists the suitable ontologies with regard to:
 | [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | Chemotion, Allotrope™ |
 | [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | RXNO |
 | [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | NameRXN, Wikipedia, Chemotion |
-| [OntoKin](http://www.theworldavatar.com/ontology/ontokin/) | chemistry | unknown | OntoCAPE upper level & modules | J-Park Simulator |
+| [OntoKin](https://www.theworldavatar.com/ontology/ontokin/) | chemistry | unknown | OntoCAPE upper level & modules | J-Park Simulator |
 | [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO classes & relations, many AFO- some custom OBO-modules  | Allotrope™ |
 | [PROCO](https://terminology.nfdi4chem.de/ts/ontologies/proco) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO/AFO & OBO based | Allotrope™ |
 | [MS](https://terminology.nfdi4chem.de/ontologies/ms) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO mapping possible | mzML |
