--- a/docs/30_data/40_data_documentation.mdx
+++ b/docs/30_data/40_data_documentation.mdx
@@ -3,7 +3,7 @@ title: "Data Documentation"
 description: description of everything that "your future-self" would need to know
 page_id: data_documentation
 related_pages:
-	problems: [data_organisation, data_storage]
+	data: [data_organisation, data_storage]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
