--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -4,7 +4,7 @@ title: "ELN"
 
 # Electronic Lab Notebooks (ELNs)
 
-ELNs are a key prerequisite to a comprehensive, digital documentation of research data and are therefore of high importance for the capturing of data for further analysis or a later re-use. ELNs are available as either commercial, free or even open-source solution.<sup>1</sup> They can be either discipline-agnostic or discipline-specific ELNs, some of them combine both aspects.<sup>2</sup> The organization of work with ELNs that support chemistry-specific functions can offer several benefits such as the availability of chemical structure identifiers and standardized formats as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. To date, only a few electronic lab notebooks meet the basic requirements of chemical sciences, probably due to the challenges arising with the drawing and processing of chemical structures, a crucial and central step for the correlation of research data with the corresponding chemical reaction or structure.<sup>3</sup> Examples for systems in chemistry that offer the necessary support of chemical structures and are available as an Open Source -as a requirement furth further adaptation by the community -  are Indigo-ELN<sup>4</sup>,  LabTrove<sup>5</sup>, OpenEnventory<sup>6</sup> and Chemotion<sup>7</sup>.
+ELNs are a key prerequisite to a comprehensive, digital documentation of research data and are therefore of high importance for the capturing of data for further analysis or a later re-use. ELNs are available as either commercial, free or even open-source solution.<sup>[1](https://doi.org/10.1186/s13321-017-0240-0)</sup> They can be either discipline-agnostic or discipline-specific ELNs, some of them combine both aspects.<sup>[2](https://doi.org/10.1186/s13321-017-0240-0)</sup> The organization of work with ELNs that support chemistry-specific functions can offer several benefits such as the availability of chemical structure identifiers and standardized formats as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. To date, only a few electronic lab notebooks meet the basic requirements of chemical sciences, probably due to the challenges arising with the drawing and processing of chemical structures, a crucial and central step for the correlation of research data with the corresponding chemical reaction or structure.<sup>[3](https://doi.org/10.1186/s13321-017-0240-0)</sup> Examples for systems in chemistry that offer the necessary support of chemical structures and are available as an Open Source -as a requirement furth further adaptation by the community - are Indigo-ELN<sup>[4](https://doi.org/10.1186/s13321-017-0240-0)</sup>, LabTrove<sup>[5](https://doi.org/10.1186/s13321-017-0240-0)</sup>, OpenEnventory<sup>[6](https://doi.org/10.1186/s13321-017-0240-0)</sup> and Chemotion<sup>[7](https://doi.org/10.1186/s13321-017-0240-0)</sup>.
 
 ## Electronic Lab Notebooks (ELNs) in NFDI4Chem
 
@@ -16,24 +16,17 @@ NFDI4Chem will support those ELNs that are relevant for documentation of chemica
 Chemotion is the ELN reference instance of NFDI4Chem. Chemotion ELN is developed by several software developers at different sites of NFDI4Chem. The ELN development started at KIT in Karlsruhe as part of a DFG funded project, the extension of the software was and is further supported by the State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts and the Karlsruhe Institute of Technology. 
 The ELN Chemotion was designed for chemists and adapted to the special requirements of chemistry laboratory work and documentation. It serves therefore as digitalization instrument for chemistry work, developed to overcome the current limitations of existing systems. To reach this goal, the development, improvement and extension of the ELN is a community effort. The ELN is also used in other disciplines beyond chemistry as it offers a broad generic functionality to meet the needs of scientists working interdiciplinarily. These generic functions are still being extended and adapted. 
 
-Chemotion ELN offers a specific function that facilitates the publication of research data: it supports the transfer of data form the ELN account of a user to a research data repository <sup>8</sup><sup>9</sup>. This function reduces the effort of the scientists to allow access to research data, which is required by many funding agencies and helpful for the publication of scientific publications. Currently, the ELN supports the tranfer of data to the repository Chemotion but the NFDI4Chem teams is working on the establishment of connections to further repositories, in particular the repositories supported and recommended by NFDI4Chem. 
+Chemotion ELN offers a specific function that facilitates the publication of research data: it supports the transfer of data form the ELN account of a user to a research data repository <sup>[8](https://doi.org/10.1186/s13321-018-0292-9),[9](https://doi.org/10.1186/s13321-018-0292-9)</sup>. This function reduces the effort of the scientists to allow access to research data, which is required by many funding agencies and helpful for the publication of scientific publications. Currently, the ELN supports the tranfer of data to the repository Chemotion but the NFDI4Chem teams is working on the establishment of connections to further repositories, in particular the repositories supported and recommended by NFDI4Chem. 
 
 
 ### Documentation, information and contact
 
-Chemotion ELN an its functions were described in different publications <sup>7,</sup><sup>10,</sup><sup>11</sup>. For users and developers and admins, a documentation is available via the project's website.<sup>12</sup> Chemotion ELN is an Open Source development, the source code is available on GitHub.<sup>13</sup>
+Chemotion ELN an its functions were described in different publications <sup>[7](https://doi.org/10.1186/s13321-017-0240-0),[10](https://doi.org/10.1186/s13321-018-0292-9),[11](https://doi.org/10.1186/s13321-019-0400-5)</sup>. For users and developers and admins, a documentation is available via the project's website.<sup>[12](https://www.chemotion.net/chemotionsaurus/docs/eln/intro)</sup> Chemotion ELN is an Open Source development, the source code is available on GitHub.<sup>[13](https://github.com/ComPlat/chemotion_ELN)</sup>
 
+## Sources and further information
 
-<sup>1</sup>
-<sup>2</sup>
-<sup>3</sup>
-<sup>4</sup>
-<sup>5</sup>
-<sup>6</sup>
-<sup>7</sup> https://doi.org/10.1186/s13321-017-0240-0
-<sup>8</sup>
-<sup>9</sup>
-<sup>10</sup> https://doi.org/10.1186/s13321-018-0292-9
-<sup>11</sup> https://doi.org/10.1186/s13321-019-0400-5
-<sup>12</sup> https://www.chemotion.net/chemotionsaurus/docs/eln/intro
-<sup>13</sup> https://github.com/ComPlat/chemotion_ELN
+- https://doi.org/10.1186/s13321-017-0240-0 
+- https://doi.org/10.1186/s13321-018-0292-9 
+- https://doi.org/10.1186/s13321-019-0400-5
+- https://www.chemotion.net/chemotionsaurus/docs/eln/intro 
+- https://github.com/ComPlat/chemotion_ELN
