added DAS article

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -1,7 +1,40 @@
 ---
-title: "Machine-Readable Chemical Structures"
+title: "Data Availability Statement"
 ---
- 
-![Under Construction](/img/Constr_2bl.png)
+# Data Availability Statement
 
-Article under construction.
+<img align="right" src='https://licensebuttons.net/l/zero/1.0/88x31.png' alt="CC0 badge" vspace="20"/>
+<i>This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.</i>
+
+## Introduction
+
+The data availability statement is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
+
+The data availability statement enables linking of the manuscript (via DOIs, alternatively using the repository-specific identifiers or accession numbers) to the corresponding FAIR dataset in research data repositories. 
+
+## Templates for Data Availability Statements
+
+<b>Data in a publicly accessible repository with DOI</b>
+
+The data generated and analysed during this study are openly available in [repository name] at [DOI as URL].
+
+<b>Data available in a public repository with DOI following an embargo from the date of publication</b>
+
+The data generated and analysed during this study will be openly available in [repository name] at [DOI as URL] following an embargo from the date of publication.
+
+<b>Data derived from public domain resources</b>
+
+The data used for/in  this study are openly available in [repository name] at [DOI as URL]. The data were derived from sources available in the public domain [list of resources]. 
+
+<b>Dataset owned by a third party and restrictions apply to availability</b>
+
+The data analysed in this study were provided by [third party] under licence/by permission and are not publicly available. Data are available from the corresponding author upon request and with permission of [third party, including contact information].
+
+<b>Data available on request to the corresponding author due to restrictions by ethical reasons and legal or privacy regulations</b>
+
+The data generated and analysed in this study are not openly available due to [reasons, including explanation]. The data are available from the corresponding author on reasonable request [mention requirements for access].
+
+<b>Data sharing not applicable, as no new data is generated</b>
+
+Data sharing is not applicable, as no new data was generated or analysed in this study.
+
