added links to other articles and created template for article on data publication

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -10,7 +10,7 @@ title: "Data Availability Statement"
 
 The data availability statement is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
 
-The data availability statement enables linking of the manuscript (via DOIs, alternatively using the repository-specific identifiers or accession numbers) to the corresponding FAIR dataset in research data repositories. 
+The data availability statement enables **[linking of the manuscript](/docs/topics/data_publication)** (via  **[PIDs](/docs/topics/pid)** such as DOIs, alternatively using the repository-specific identifiers or accession numbers) to the corresponding FAIR dataset in research data **[repositories](/docs/topics/repositories)**. 
 
 ## Templates for Data Availability Statements
 
@@ -34,7 +34,7 @@ The data analysed in this study were provided by [third party] under licence/by 
 
 The data generated and analysed in this study are not openly available due to [reasons, including explanation]. The data are available from the corresponding author on reasonable request [mention requirements for access].
 
-<b>Data sharing not applicable, as no new data is generated</b>
+<b>Data sharing not applicable, as no new data generated or analysed</b>
 
 Data sharing is not applicable, as no new data was generated or analysed in this study.
 
