Changes to DAS article following further comments on the draft.

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -24,15 +24,11 @@ The data generated and analysed during this study will be openly available in [r
 
 <b>Data derived from public domain resources</b>
 
-The data used for/in  this study are openly available in [repository name] at [DOI as URL]. The data were derived from sources available in the public domain [list of resources]. 
+The data used in this study are openly available in [repository name] at [DOI as URL]. The data were derived from sources available in the public domain [list of resources]. 
 
 <b>Dataset owned by a third party and restrictions apply to availability</b>
 
-The data analysed in this study were provided by [third party] under licence/by permission and are not publicly available. Data are available from the corresponding author upon request and with permission of [third party, including contact information].
-
-<b>Data available on request to the corresponding author due to restrictions by ethical reasons and legal or privacy regulations</b>
-
-The data generated and analysed in this study are not openly available due to [reasons, including explanation]. The data are available from the corresponding author on reasonable request [mention requirements for access].
+The data analysed in this study were provided by [third party] under licence/by permission and are not publicly available. Data are available from the corresponding author upon request and with permission of [third party, including contact information to third party].
 
 <b>Data sharing not applicable, as no new data generated or analysed</b>
 
