--- a/docs/40_topics/110_data_life_cycle.mdx
+++ b/docs/40_topics/110_data_life_cycle.mdx
@@ -3,14 +3,54 @@ title: "Data Life Cycle"
 ---
 
 
-Article about Data life cycle
+# Research Data Life Cycle
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut dolor a justo iaculis sagittis. Nullam sit amet sodales ligula. Nam vel turpis ante. Ut vestibulum, urna ut porttitor volutpat, nisi massa malesuada ex, vitae mattis lorem nisi ac lorem. Fusce bibendum nec enim at tincidunt. Phasellus convallis magna dui, eget cursus eros bibendum id. Phasellus eu lacinia quam. Morbi venenatis suscipit elit ut consectetur. Praesent ut quam ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque non faucibus massa. Duis consequat efficitur magna, non dignissim mauris imperdiet eget.
+## Introduction
 
-Ut egestas metus ut ante luctus, tristique malesuada ante pretium. Mauris aliquet consectetur eros, eget mollis augue congue sollicitudin. Mauris iaculis metus vitae felis hendrerit, ac tempus tortor vestibulum. Proin ullamcorper, metus sed ultrices molestie, velit nulla feugiat odio, a fermentum erat sem quis sem. Maecenas pharetra mauris non luctus hendrerit. Donec non mauris blandit, fringilla lacus sed, porttitor sem. Integer a ante massa. Morbi rhoncus quis odio in maximus. Nullam mollis pulvinar condimentum. Nunc nulla magna, porttitor a porttitor id, suscipit non nibh. Fusce blandit purus maximus felis egestas imperdiet. Donec quis convallis nibh.
+In scientific work, the assurance of [good research practice](https://doi.org/10.5281/zenodo.3923602) is the highest imperative.
 
-Cras dictum pharetra lectus, a laoreet nulla commodo at. Proin aliquet risus eu nisi tempus, non lobortis mauris tristique. Vivamus at libero a risus ornare commodo. Integer in ante vestibulum, feugiat dolor at, blandit dui. Sed at dui non erat hendrerit ornare sit amet at lorem. Sed sed urna sodales, hendrerit elit sit amet, auctor turpis. Proin lobortis urna nec pulvinar iaculis. Morbi vel mollis erat, ut finibus eros. Phasellus in pharetra dui. Etiam vel ultricies tellus, in mollis ante. Aenean vel lectus odio. Ut tincidunt vel neque non faucibus. Mauris pulvinar velit fermentum, fermentum urna ac, ornare turpis. Integer vel tristique orci. Nulla malesuada mattis erat sed condimentum. Cras dui libero, iaculis a fringilla eget, luctus a diam.
+To ensure compliance, professional handling of research data is of particular importance. To illustrate the handling of research data, there are various models such as the [domain model](https://dl.gi.de/handle/20.500.12116/894) or the research data life cycle model. The research data life cycle model describes the lifespan of the data and beyond based on various phases from planning to publication or conscious deletion. For the research data life cycle, there are different approaches to the same model depending on the institution, the funder, etc. Different priorities can be placed on the data life cycle. The approach taken by [NFDI4Chem](http://nfdi4chem.de/) is shown in the figure below.
+<!-- One possible approach is shown in figure 1. -->
 
-Integer cursus ipsum quis turpis feugiat, in elementum odio porta. Nulla nec ligula metus. Aliquam varius nisi nec mauris bibendum tristique. Maecenas vel elit ac leo suscipit facilisis eget non est. Donec aliquam suscipit erat. Praesent at odio et magna vestibulum euismod a eu nunc. Sed tristique id sapien quis aliquet. Suspendisse ac odio volutpat, mattis odio at, aliquam mauris. Curabitur ac nisl vitae ante interdum auctor vel sed ex. Donec ac accumsan magna. Sed orci justo, commodo dictum nibh vel, vestibulum posuere metus. Proin mollis sapien at libero tempor porttitor. Quisque quis risus posuere, varius diam sed, consectetur risus.
+![Research Data Life Cycle](../../static/img/topics/researchDataLifeCycle.png)
 
-Nunc arcu leo, porta ac laoreet vitae, blandit eget elit. Vestibulum id augue ullamcorper, interdum magna nec, cursus odio. Donec quam justo, posuere sit amet ligula sit amet, pharetra pellentesque dolor. Nullam ante dui, porta vitae auctor eget, accumsan ut mauris. Nunc finibus malesuada accumsan. Sed at libero a ex sollicitudin aliquam. Donec in ante eget nisi cursus euismod. Fusce lorem justo, mollis quis commodo in, pulvinar at libero.
+## Phase 1: Experiment Design
+
+In phase 1, you start with the **planning of your experiment design** as well as your **data management** ([formats](40_format_standards.mdx), [storage](../30_data/50_data_storage.mdx) …). During this planning phase, already **existing data** should be located and the **legal framework** for use should be checked.
+You should be aware of the various **requirements** of the research funder, your university, your institution, and your community and should write a **first draft** of your **[data management plan (DMP)](../30_data/10_dmp.mdx)**. In this first draft, you should define the **responsibilities**.
+
+## Phase 2: Experiment/ Data Collection
+
+**New data** is created or collected in this phase, e.g. through chemical synthesis, simulations of molecules, or measurements carried out on samples. When conducting the respective experiment, make sure that you also create or record the **relevant [metadata](30_metadata.mdx)** that describes the data. The [documentation](../30_data/40_data_documentation.mdx) of the created data with all further information and metadata should be recorded in an [(electronic) laboratory notebook](10_eln.mdx).
+
+If you use existing data or samples, **clarify the rights of use**. In this case, provenance metadata may provide you with information. In addition, a link should be created between the existing data and the newly generated data. This is relevant information and helps you in the [reuse phase](#phase-6-re-use).
+
+## Phase 3: Data Processing
+
+In the data processing phase, the collected data should be **digitised** if it is not directly coming in a digital format and as far as it is possible. An electronic lab notebook can greatly assist in this step and brings the data together—whether digital or digitised. Furthermore, **you should think about collecting further information and metadata** on the data. Think about the different types of metadata such as descriptive, administrative, or structural metadata. Enriching the data with further, machine-readable metadata makes the data searchable.
+Moreover, **quality assurance** is important at this phase. Check, validate and clean the data! You should save the data and prepare a data backup.
+
+## Phase 5: Disclosure/ Publication
+
+During this exchange and the associated reflections on the data, you should think about archiving and using the data in scientific publications. If you are not aware of any **criteria for archiving** and no criteria are specified in your working group or institute, decision-making guides such as the [“5 steps to decide what data to keep”](https://www.dcc.ac.uk/guidance/how-guides/five-steps-decide-what-data-keep)  outlined by the DCC can help. Based on the established criteria, it is determined which of the collected raw data should be archived and which should be deliberately deleted.
+
+In addition to the criteria, the migration of the data into **suitable [formats](40_format_standards.mdx) and onto suitable media** is important for archiving the data. In this step, the data should again be enriched with metadata so that it can be understood in the future without further knowledge about the data.
+In addition to archiving, the [publication](../30_data/60_data_publication.mdx) of the data plays a special role. Many research funders expect the data to be published if there are no special reasons not to do so, such as a non-disclosure agreement or the inclusion of personal data. A **chemistry-specific or chemistry-related [repository](20_repositories.mdx)** such as the [Chemotion Repository](https://www.chemotion-repository.net/), [NOMAD](https://nomad-lab.eu/services/repo-arch), or [MassBank](https://massbank.eu/MassBank/)  is recommended for the publication of data. An overview of repositories can be found, for example, at [re3data.org](https://www.re3data.org/) or [fairsharing.org](https://fairsharing.org/). re3data.org allows you to filter repositories according to certain criteria such as the assignment of a persistent identifier or access.
+Data publication often takes place at certain milestones, for example, in combination with a text publication or at the end of a project. The **final version of the data management plan** is also required at the end of a project.
+
+## Phase 6: Re-use
+
+In the re-use phase, you or others conduct further research on how the data can be put into **new contexts** and how **new ideas** can be generated. Questions such as: How can I further develop my synthesis strategy? Which settings do I need to change in my spectroscopic measurements? and so on are developed further in this phase. **New usage scenarios** can also arise in chemistry or in other disciplines, such as Big Data applications. Furthermore, these data and the insights gained from them can be valuable for teaching and learning purposes.
+
+In order to return these data to the cycle, it is important that these data are described in detail with metadata, that proper documentation has been carried out in the form of a DMP, and that the data are citable.
+
+What is the potential of your data?  
+
+## Sources and other Information
+
+- DFG Guidelines for Safeguarding Good Research Practice. Code of Conduct [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
+- [Introducing research data management as a service suite at RWTH Aachen University](https://dl.gi.de/handle/20.500.12116/894) <!--ISBN: 978-3-88579-651-0-->
+- [Review of data management lifecycle models](https://researchportal.bath.ac.uk/en/publications/review-of-data-management-lifecycle-models)
+- [DCC: 5 steps to decide what data to keep](https://www.dcc.ac.uk/guidance/how-guides/)
+- German: [Überblick zum Management von Forschungsdaten (FDM I) = Research Data Management - An Overview](https://doi.org/10.18154/RWTH-2019-06489)
+- German: [Forschungsdaten.info: Informieren und Planen](https://www.forschungsdaten.info/themen/informieren-und-planen/datenlebenszyklus/ )
