del footnote-style refs, DOIs all under soures

--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -4,7 +4,7 @@ title: "ELN"
 
 # Electronic Lab Notebooks (ELNs)
 
-ELNs are a key prerequisite to a comprehensive, digital documentation of research data and are therefore of high importance capturing data for further analysis or a later re-use. ELNs are available as either a commercial, free, or even an Open Source solution.<sup>[1](https://doi.org/10.1186/s13321-017-0240-0)</sup> ELNs can be either discipline-agnostic or discipline-specific; some of them combine both aspects.<sup>[2](https://doi.org/10.1186/s13321-017-0240-0)</sup> The organization of work with ELNs that support chemistry-specific functions can offer several benefits such as the availability of [chemical structure identifiers](70_machine-readable_chemical_structures.mdx) and [standardized formats](40_format_standards.mdx) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. To date, only a few electronic lab notebooks meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure.<sup>[3](https://doi.org/10.1186/s13321-017-0240-0)</sup> Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
+ELNs are a key prerequisite to a comprehensive, digital documentation of research data and are therefore of high importance capturing data for further analysis or a later re-use. ELNs are available as either a commercial, free, or even an Open Source solution. ELNs can be either discipline-agnostic or discipline-specific; some of them combine both aspects. The organization of work with ELNs that support chemistry-specific functions can offer several benefits such as the availability of [chemical structure identifiers](70_machine-readable_chemical_structures.mdx) and [standardized formats](40_format_standards.mdx) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. To date, only a few electronic lab notebooks meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure. Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
 
 ## Electronic Lab Notebooks (ELNs) in NFDI4Chem
 
@@ -16,7 +16,7 @@ Chemotion is the ELN reference instance in NFDI4Chem. The Chemotion ELN is devel
 
 The Chemotion ELN was designed for chemists and adapted to the special requirements of chemical laboratory work and documentation. It therefore serves as a digitalization instrument for work in chemistry, developed to overcome the current limitations of the existing systems. To reach this goal, the development, improvement, and extension of the ELN is a community effort. The ELN is also used in other disciplines beyond chemistry as it offers a broad generic functionality to meet the needs of scientists working in interdisciplinary environments. These generic functions are still being extended and adapted.
 
-Chemotion ELN offers a specific function that facilitates the [publication of research data](../30_data/60_data_publication.mdx): it supports the transfer of data from a user's ELN account to a research data repository<sup>[8](https://doi.org/10.1186/s13321-018-0292-9),[9](https://doi.org/10.1186/s13321-018-0292-9)</sup>. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+Chemotion ELN offers a specific function that facilitates the [publication of research data](../30_data/60_data_publication.mdx): it supports the transfer of data from a user's ELN account to a research data repository. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
 
 A short introduction to the Chemotion ELN as well as the connection to the Chemotion repository is demonstrated in this video:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tZHaP6DW-Dw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
