--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -30,7 +30,9 @@ The data used in this study are openly available in [repository name] at [DOI as
 
 The data analysed in this study were provided by [third party] under licence/by permission and are not publicly available. Data are available from the corresponding author upon request and with permission of [third party, including contact information to third party].
 
+<b>Data available on request to a Data Access Committee due to restrictions by ethical reasons and legal or privacy regulations</b>
+The data generated and analysed in this study are not openly available due to [reasons, including explanation]. The data are available on reasonable request to a Data Access Committee [provide access information].
+
 <b>Data sharing not applicable, as no new data generated or analysed</b>
 
 Data sharing is not applicable, as no new data was generated or analysed in this study.
-
