--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -48,29 +48,29 @@ To retrieve SMILES, InChI and InChIKey in ChemDraw Professional, select a struct
 <img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemDraw_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
 
 
-(ChemDraw Profession v20.1.0.11, PerkinElmer Informatics, Inc., Waltham, MA, United States, 2021.)
+(ChemDraw Professional v20.1.0.11, PerkinElmer Informatics, Inc., Waltham, MA, United States, 2021.)
 
 ### ChemSketch
 
 To retrieve SMILES, InChI and InChIKey in ACD/ChemSketch, select a structure, then choose Tools-> Generate -> SMILES Notation or InChI for Structure.
-
-Choosing InChI for Structure will also provide the InChIKey, if enabled under InChI Options. To include InChIKey, choose Tools -> Generate -> InChI Options and tick InChI Key. 
 
 <img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemSketch_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
 
 
 (ACD/ChemSketch v2021.1.1, Advanced Chemistry Development, Inc., Toronto, ON, Canada, 2021.) 
 
+Choosing InChI for Structure will also provide the InChIKey, if enabled under InChI Options. To include InChIKey, choose Tools -> Generate -> InChI Options and tick InChI Key. 
+
 ### MarvinSketch
 
-To retrieve SMILES, InChI and InChIKey in MarvinSketch select a structure, then choose Edit -> Copy As -> Daylight SMILES, InChI/RInChI or InChIKey/RInChIKey.
-
-Alternatively, SMILES, InChI and InChIKey can also be saved as text files by choosing File -> Save as -> choose Daylight SMILES, InChI/RInChI or InChIKey/RInChIKey from the dropdown menu -> Save.
+To retrieve SMILES, InChI and InChIKey in MarvinSketch select a structure, then choose Edit -> Copy As. In a new windows choose Daylight SMILES, InChI/RInChI or InChIKey/RInChIKey.
 
 <img align="center" src={useBaseUrl('/img/topics/Screenshots_MarvinSketch_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
 
 
 (MarvinSketch v21.18, ChemAxon, Ltd., Budapest, Hungary, 2021.)
+
+Alternatively, SMILES, InChI and InChIKey can also be saved as text files by choosing File -> Save as -> choose Daylight SMILES, InChI/RInChI or InChIKey/RInChIKey from the dropdown menu -> Save.
 
 ## Provide machine-readable data as supplementary table
 
