--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -10,7 +10,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Introduction
 
-Finding relevant articles based on IUPAC names or trivial names of molecules is a challenging task, while chemical identifiers allow for unambiguous identification of compounds. Redrawing of chemical structures is labour and time intensive, while chemical table (CT) files can be opened out of the box with any common structure drawing software. 
+Finding relevant articles based on IUPAC names or trivial names of molecules is a challenging task, while chemical identifiers allow for unambiguous identification of compounds. Redrawing of chemical structures is labour- and time intensive, while chemical table (CT) files can be used without any additional effort with any common structure drawing software. 
 
 Having machine-readable chemical structures as **[CT files](/docs/topics/ct_files)** such as mol files, **[InChI](/docs/topics/inchi)** identifiers and **[SMILES](/docs/topics/smiles)** structure codes as part of a dataset associated with a research article will enhance its **[findability](/docs/topics/fair)** by making the article easily indexable and structure-searchable. This also improves **[interoperability](/docs/topics/fair)** and facilitates **[reuse](/docs/topics/fair)** of scientific work.
 
