Added ref to specification for ctfile format article

--- a/docs/40_topics/75_ct_files.mdx
+++ b/docs/40_topics/75_ct_files.mdx
@@ -28,5 +28,4 @@ CT files were created by MDL Information Systems, later acquired by Symyx Techno
 
 ## References
 
-Biovia, Inc., 
-
+**[CTfile Formats, BIOVIA, San Diego, CA, United States, Dessault Systémes, SE., Vélizy-Villacoublay, France, 2016.](https://discover.3ds.com/ctfile-documentation-request-form)**
