--- a/docs/40_topics/30_metadata.mdx
+++ b/docs/40_topics/30_metadata.mdx
@@ -48,5 +48,11 @@ or the
 
 [The Chemical Analysis Metadata Platform (ChAMP)](https://champ.stuchalk.domains.unf.edu/) is a project, which focuses defining a framework for chemical analysis methods.
 
+## Sources and further information
+
+A short introductory video to Metadata can be found here (in German):
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TnpDnflK66I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 
